minor changes (mostly CSS positioning)

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <main class="taskList__section">
         <h2 class="taskList__sectionHeader">Lista zadań</h2>
         <ul class="taskList__taskList js-taskList">
-            <li class="taskList__task">
+            <!--<li class="taskList__task">
                 <button class="taskList__toggleTaskDone js-toggleTaskDone">✔</button>
-                <strong class="taskList__taskName">Nazwa</strong>
+                <strong class="taskList__taskName taskList__taskName--done">task name</strong>
                 <button class="taskList__deleteTask js-deleteTask">🗑️</button>
-            </li>
+            </li>-->
         </ul>
     </main>
 </body>
