--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         <h2 class="taskList__sectionHeader">Lista zadań</h2>
         <ul class="taskList__taskList js-taskList">
             <!--<li class="taskList__task">
-                <button class="taskList__toggleTaskDone js-toggleTaskDone">✔</button>
+                <button class="taskList__smallButton js-toggleTaskDone">✔</button>
                 <strong class="taskList__taskName taskList__taskName--done">task name</strong>
-                <button class="taskList__deleteTask js-deleteTask">🗑️</button>
+                <button class="taskList__smallButton taskList__smallButton--red js-deleteTask">🗑</button>
             </li>-->
         </ul>
     </main>
