--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             </div>
         </div>
         <ul class="taskList__taskList js-taskList">
-            <!--<li class="taskList__task">
+            <!--<li class="taskList__task taskList__task--done">
                 <button class="taskList__smallButton js-toggleTaskDone">✔</button>
-                <strong class="taskList__taskName taskList__taskName--done">task name</strong>
+                <strong class="taskList__taskName">task name</strong>
                 <button class="taskList__smallButton taskList__smallButton--red js-deleteTask">🗑</button>
             </li>-->
         </ul>
